[gd_scene load_steps=5 format=3 uid="uid://c32k37svumggt"]

[ext_resource type="Script" uid="uid://cdfpxuqxuxe2e" path="res://assets/game/ui/trading/trade_resource_ui.gd" id="1_j66rd"]
[ext_resource type="Theme" uid="uid://cquy46qi6nrmx" path="res://assets/game/ui/game_theme.tres" id="2_o6uo7"]
[ext_resource type="Texture2D" uid="uid://ci51nt8puxdik" path="res://assets/game/board/tiles/art/grain.png" id="3_w036o"]

[sub_resource type="LabelSettings" id="LabelSettings_i6hrq"]
font_size = 32

[node name="TradeResource" type="PanelContainer"]
script = ExtResource("1_j66rd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_o6uo7")

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_o6uo7")
texture = ExtResource("3_w036o")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_o6uo7")

[node name="SubtractButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_o6uo7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "-"
icon_alignment = 1

[node name="Amount" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_i6hrq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("2_o6uo7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "+"
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SubtractButton" to="." method="_on_subtract_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
